# Crawlo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  ENGINE_EXIT_OPTIMIZATION.md  ENGINE_LOOP_OPTIMIZATION_REPORT.md  FINAL_SCHEDULER_SUMMARY.txt  IMPORT_FIX_REPORT.md  LICENSE  LOGGING_FIX_REPORT.md  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS.md  README.en.md  README.md  README.zh.md  RESOURCE_MONITORING_GUIDE.md  TIMING_EXAMPLE.md  TODO_IMPROVEMENTS.md  _log_search.py  adaptive_fingerprints.db  debug_empty_queue.py  design-defects-analysis.md  design-defects-check.md  distributed_improvements.md  final_dingtalk_test.py  list_detail_priority_test.py  mkdocs.yml  monitor_scheduler.py  note.md  optimization_summary.md  priority_test.py  pyproject.toml  queue_empty_test.py  redis_queue_optimization_plan.md  requirements.txt  run_executive_changes.py  scheduler_queue_analysis.md  scheduler_report.py  setup.cfg  setup.py  (+22 more)
api/: crawlo_crawler.md  crawlo_filters___init__.md  crawlo_items_items.md  crawlo_middleware___init__.md  crawlo_pipelines___init__.md  crawlo_utils_log.md
article/: article1_architecture.md  article2_cli.md  article3_distributed.md  article4_data_cleaning.md  article5_config_validator.md  article6_framework_practice.md
assets/: README.md  logo-preview.html  resource_leak_detection_guide.md
crawlo/: __init__.py  application.py  cli.py  config.py  config_validator.py  constants.py  crawler.py  crawler_models.py  crawler_process.py  error_types.py  event.py  exceptions.py  framework.py  interfaces.py  mode_manager.py  project.py  refactored_crawler.py  stats_backend.py  stats_collector.py  subscriber.py  task_manager.py
docs/: CrawloConfig使用说明.md  PROXY_MIDDLEWARE_ANALYSIS.md  README.md  README_en.md  README_zh.md  adaptive_selector_guide.md  advanced-features.md  advanced_tools.md  advanced_tools_zh.md  api_data_collection_example.md  api_data_collection_example_zh.md  api_reference.md  api_reference_zh.md  api_usage_examples.md  architecture-overview.md  attachment_downloader_guide.md  beginner-tutorial.md  check_ast.py  checkpoint-guide.md  cleaners.md  cli-reference.md  commands.md  comprehensive_test_report.md  configuration.md  configuration_best_practices.md  configuration_best_practices_zh.md  date_tools_zh.md  (+55 more)
(+1271 files in other folders)
