[metadata]
name = crawlo
version = attr: crawlo.__version__.__version__
author = crawl-coder
python_requires = >=3.11
author_email = crawlo@qq.com
license = BSD-3-Clause
description = Crawlo: A high-performance asynchronous Python web crawling framework with distributed support.。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crawl-coder/Crawlo.git
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
license_files = 

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires = 
	aiohttp>=3.13.3
	aiofiles>=25.1.0
	aioredis>=2.0.1
	chardet>=7.4.3
	cssselect>=1.2.0
	dateparser>=1.2.2
	httpx[http2]>=0.27.0
	curl-cffi>=0.13.0
	lxml>=4.9.0
	parsel>=1.9.1
	pydantic>=2.11.7
	python-dateutil>=2.9.0.post0
	redis>=6.2.0
	ujson>=5.9.0
	w3lib>=2.3.1
	rich>=13.0.0
	astor>=0.8.0
	watchdog>=3.0.0
	psutil>=7.0.0
	anyio>=4.3.0
	httpcore>=1.0.5
	msgpack>=1.0.0
	pytz>=2024.2
	yarl>=1.17.0

[options.extras_require]
database = 
	asyncmy>=0.2.11
	motor>=3.7.0
	pymongo>=4.11
	aiosqlite>=0.19.0
	asyncpg>=0.29.0
	clickhouse-connect>=0.7.0
	elasticsearch>=8.0.0,<9.0.0
	happybase>=1.2.0
sqlite = 
	aiosqlite>=0.19.0
postgresql = 
	asyncpg>=0.29.0
clickhouse = 
	clickhouse-connect>=0.7.0
elasticsearch = 
	elasticsearch>=8.0.0,<9.0.0
hbase = 
	happybase>=1.2.0
bloom = 
	pybloom-live>=0.3.1
render = 
	playwright
	# Camoufox 0.4.x API 变更（仅暴露 start()），当前 CamoufoxDownloader 需要 new_page()+close()
	# TODO: 适配 camoufox_downloader.py 以兼容 v0.4+
	camoufox>=0.3.0
	# DrissionPage
	DrissionPage>=4.1.0
stealth = 
	cloakbrowser[geoip]>=0.3.14
mcp = 
	mcp>=1.0.0
	markdownify>=0.13.1
db-all = 
	%(sqlite)s
	%(postgresql)s
	%(clickhouse)s
	%(elasticsearch)s
	%(hbase)s
	%(database)s
all = 
	bitarray>=1.5.3
	PyExecJS>=1.5.1
	pymongo>=3.10.1
	redis-py-cluster>=2.1.0
	%(database)s
	%(render)s
	%(stealth)s
	%(mcp)s
	%(db-all)s

[options.package_data]
crawlo = 
	templates/**
	utils/js/**

[options.entry_points]
console_scripts = 
	crawlo = crawlo.cli:main
	crawlo-mcp = crawlo.mcp.server:main

[egg_info]
tag_build = 
tag_date = 0

